:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

=== Changed

* Assign `tab` role to each item in tab list
* Apply border and padding to tab pane element instead of its parent

=== Fixed

* Configure overflow content in tab panel to scroll horizontally
* Set background on tabs properly so background does not bleed through

== 1.0.0-alpha.8 (2022-11-30) - @mojavelinux

=== Fixed

* Sync tab selection on hash change (#32)
* Lock position of content when synchronizing tab selection (#34)
* Remove bottom margin from last block in tab pane for the most common cases

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.8[git tag] | {url-repo}/compare/v1.0.0-alpha.7\...v1.0.0-alpha.8[full diff]

== 1.0.0-alpha.7 (2022-11-28) - @mojavelinux

=== Added

* In tabs script, add `tab` class to tab element
* Sync tab selection across tabs blocks if `sync` option is set on tabs block or `tabs-sync-option` attribute is set on document (#28)
* Delist tabs block from sync if `nosync` option is set on block (#28)

=== Changed

* When inline anchor is used for tab ID, promote value of id attribute to id attribute on tab and remove anchor

=== Fixed

* Apply normal substitutions to principal text (first paragraph) of tab's content (#29)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.7[git tag] | {url-repo}/compare/v1.0.0-alpha.6\...v1.0.0-alpha.7[full diff]

== 1.0.0-alpha.6 (2022-11-16) - @mojavelinux

=== Added

* Honor title on tabs block; apply normal subs to it (#26)
* Clear location hash (URL fragment) when a tab is clicked (#24)
* Register ref for each tab so its ID can be used as target of xref (#24)
* Activate tab when selected from an internal xref (#24)

=== Fixed

* Decode fragment from URL so it can be matched against tab ID (#27)

=== Details
